# usbd-dfu-example

./: LICENSE  README.md
dfu-blink/: .gitignore  Cargo.toml  flash-dfu  memory.x
dfu-blink/.cargo/: config.toml
dfu-blink/src/: main.rs
dfu-bootloader/: .gitignore  Cargo.toml  LICENSE  flash-st  memory.x
dfu-bootloader/.cargo/: config.toml
dfu-bootloader/src/: main.rs
