[package]
name = "dfu-blink"
description = "Blink application for DFU bootloader example"
version = "0.1.0"
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/vitalyvb/usbd-dfu-example"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.6.7"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]

