[package]
name = "dfu-blink"
description = "Blink application for DFU bootloader example"
version = "0.4.0"
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vitalyvb/usbd-dfu-example"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]
