[package]
name = "dfu-bootloader"
description = "DFU bootloader example"
version = "0.3.1"
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
edition = "2021"
license = "MIT"
keywords = ["no-std", "usb-device", "dfu"]
repository = "https://github.com/vitalyvb/usbd-dfu-example"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
usbd-dfu = "0.3.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[dependencies.usb-device]
version = "0.2.9"
# features = ["control-buffer-256"]

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

