[package]
name = "dfu-bootloader"
description = "DFU bootloader example"
version = "0.4.0"
authors = ["Vitalii Bursov <vitaly@bursov.com>"]
edition = "2021"
license = "MIT"
keywords = ["no-std", "usb-device", "dfu"]
repository = "https://github.com/vitalyvb/usbd-dfu-example"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
debug = true
panic = "abort"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[dependencies.usbd-dfu]
version = "0.4.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]

[dependencies.usb-device]
version = "0.3.2"
# features = ["control-buffer-256"]

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103", "rt"]

[patch.crates-io]
# need a version that supports usb-device 0.3
stm32-usbd = { git = "https://github.com/stm32-rs/stm32-usbd.git", rev = "ca23b91d347438d322359f9ff7bc9d8e592f82b8" }
